@@ -8,8 +8,12 @@ permissions:
   contents: write
 
 env:
-  PROJECT_PATH: WpfDemo/WpfDemo.csproj
-  ISS_PATH: WpfDemo/WpfDemo.iss
+  APPLICATION_NAME: WpfDemo
+  PROJECT_DIR: WpfDemo
+  PROJECT_NAME: WpfDemo
+  PROJECT_PATH: ${{ env.PROJECT_DIR }}/${{ env.PROJECT_NAME }}.csproj
+  ISS_PATH: ${{ env.PROJECT_DIR }}/${{ env.PROJECT_NAME }}.iss
+  OUTPUT_DIR: ${{ env.PROJECT_DIR }}/output
 
 jobs:
   build:
@@ -40,7 +44,7 @@ jobs:
           options: /O+
 
       - name: Rename Setup file
-        run: ren WpfDemo/output/setup.exe WpfDemo.${{ github.ref_name }}.exe
+        run: ren ${{ OUTPUT_DIR }}/setup.exe ${{ env.APPLICATION_NAME }}.${{ github.ref_name }}.exe
 
       - name: Create Release
         id: create_release
@@ -49,9 +53,9 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           tag_name: ${{ github.ref_name }}
-          name: WpfDemo Release ${{ github.ref_name }}
+          name: ${{ APPLICATION_NAME }} Release ${{ github.ref_name }}
           draft: false
           prerelease: false
-          body_path: WpfDemo/changes.txt
-          files: WpfDemo/output/WpfDemo.${{ github.ref_name }}.exe
+          body_path: ${{ PROJECT_DIR }}/changes.txt
+          files: ${{ env.OUTPUT_DIR }}/${{ env.APPLICATION_NAME }}.${{ github.ref_name }}.exe
           fail_on_unmatched_files: true
